--- a/sep_19_homework/App/templates/regist.html
+++ b/sep_19_homework/App/templates/regist.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>regist</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../static/style.css" />
 	</head>
 	<body>
 		<div id="wrap">
@@ -29,7 +29,7 @@
 					<h1>
 						注册
 					</h1>
-					<form action="login.html" method="post">
+					<form action="{{ url_for('bp.addUser') }}" method="post">
 						<table cellpadding="0" cellspacing="0" border="0"
 							class="form_table">
 							<tr>
@@ -37,7 +37,7 @@
 									用户名:
 								</td>
 								<td valign="middle" align="left">
-									<input type="text" class="inputgri" name="username" />
+									<input type="text" class="inputgri" name="username" value="none" placeholder="请填写用户名"/>
 								</td>
 							</tr>
 							<tr>
@@ -70,10 +70,10 @@
 								</td>
 								<td valign="middle" align="left">
 									男
-									<input type="radio" class="inputgri" name="sex" value="m"
+									<input type="radio" class="inputgri" name="sex" value="male"
 										checked="checked" />
 									女
-									<input type="radio" class="inputgri" name="sex" value="f" />
+									<input type="radio" class="inputgri" name="sex" value="female" />
 								</td>
 							</tr>
 							<tr>
@@ -92,17 +92,17 @@
 									<textarea rows="5" cols="30" name="ask" style="resize:none;"></textarea>
 								</td>
 							</tr>
-							<tr>
-								<td valign="middle" align="right">
-									验证码:
-									<img id="num" src="checkCode" />
-									<a href="javascript:;"
-										onclick="document.getElementById('num').src = 'checkCode?'+(new Date()).getTime()">换一张</a>
-								</td>
-								<td valign="middle" align="left">
-									<input type="text" class="inputgri" name="number" />
-								</td>
-							</tr>
+{#							<tr>#}
+{#								<td valign="middle" align="right">#}
+{#									验证码:#}
+{#									<img id="num" src="checkCode" />#}
+{#									<a href="javascript:;"#}
+{#										onclick="document.getElementById('num').src = 'checkCode?'+(new Date()).getTime()">换一张</a>#}
+{#								</td>#}
+{#								<td valign="middle" align="left">#}
+{#									<input type="text" class="inputgri" name="number" />#}
+{#								</td>#}
+{#							</tr>#}
 						</table>
 						<p>
 							<input type="submit" class="button" value="Submit &raquo;" />
